# extension-sqlite-github-repos

./: .gitignore  README.md  justfile  main.py  pyproject.toml  queries.sql
src/: main.py  state.py  toolbox.py
tools/github-repo-to-sqlite/: .gitignore  dumpRepo.js  issuesToSqlite.js  package.json
