[project]
name = "extension-github-repo-explorer"
version = "0.1.0"
description = "A sample gloodata extension in python using glootil to explore a gituhub repository from a sqlite database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosql>=13.4",
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "glootil>=0.2.0",
    "uvicorn>=0.34.2",
]
